--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="hero-overlay">
       <div class="hero-left">
         <div class="hero-text">
-          <h2>| Julie Smith |</h2>
+          <h2>| David Soriano |</h2>
           <h1>TV, Film, and<br />Theater Actress</h1>
-          <p>Available for commissions worldwide.</p>
+          <p>Available for commissions worldwide!</p>
           <div class="buttons">
             <a href="#" class="btn primary">▶ Video Gallery</a>
             <a href="#" class="btn secondary">Contact Me</a>
