🚀 Added CV page, contact icons, and updated gallery layout

--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Video Gallery | Julie Smith</title>
+  <title>Video Gallery | David Soriano</title>
 
   <!-- Main Styles -->
   <link rel="stylesheet" href="styles/style.css" />
@@ -17,40 +17,80 @@
   <header>
     <img src="assets/icons/logo.png" alt="Logo" class="logo" />
     <nav>
-      <a href="index.html#about">About</a>
-      <a href="gallery.html" class="active">Video Gallery</a>
-      <a href="#">Contact</a>
+      <a href="index.html#about">Sobre Mí</a>
+      <a href="gallery.html" class="active">Galería de Videos</a>
+      <a href="#">Contáctame</a>
+      <a href="cv.html" class="btn-cv">CV</a>
     </nav>
   </header>
 
-  <!-- HERO -->
-  <section class="video-hero">
-    <h1 class="gallery-title">🎬 Video Gallery</h1>
-    <p class="gallery-sub">A curated selection of my favorite performances</p>
-  </section>
+  <!-- CONTENIDO PRINCIPAL -->
+  <main class="gallery-content">
+    
+    <!-- HERO -->
+    <section class="video-hero">
+      <h1 class="gallery-title">🎬 Galería de Videos</h1>
+      <p class="gallery-sub">Una selección de mis actuaciones favoritas</p>
+    </section>
 
-  <!-- VIDEO GRID -->
-  <section class="video-grid">
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" title="Monologue" frameborder="0" allowfullscreen></iframe>
+    <!-- VIDEO GRID -->
+    <section class="video-grid">
+
+      <div class="video-card">
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/P2i64caPAhM" title="THE MEETING" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2>Short Film – <em>The Meeting</em></h2>
       </div>
-      <h2>Monologue – <em>The Reckoning</em></h2>
-    </div>
 
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" title="Scene" frameborder="0" allowfullscreen></iframe>
+      <div class="video-card">
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/2Xt9nKaIa2M" title="HAMSTERMAN" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2>Short Film – <em>Hamsterman</em></h2>
       </div>
-      <h2>Scene – <em>The Long Goodbye</em></h2>
-    </div>
 
-    <!-- Add more cards by duplicating above blocks -->
-  </section>
+      <div class="video-card">
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/fX4ldzUowIk" title="LA CABAÑA" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2>Short Film – <em>La Cabaña</em></h2>
+      </div>
+
+      <div class="video-card">
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/iFNVvtmv0e0" title="LA CASA DE PAPEL" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2>Short Film – <em>La Casa de Papel</em></h2>
+      </div>
+
+      <div class="video-card">
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/g9mLKs9Bc7U" title="BAD TWINS" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2>Short Film – <em>Bad Twins</em></h2>
+      </div>
+
+      <div class="video-card">
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/vW_Apx5VZF4" title="DARK" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <h2>Short Film – <em>Dark</em></h2>
+      </div>
+
+    </section>
+
+  </main>
 
   <!-- FOOTER -->
-  <footer>
-    <p style="text-align:center; color:#aaa; padding: 40px;">© 2025 Julie Smith</p>
+  <footer class="gallery-footer">
+    <div class="contact-info">
+      <p><strong>David Soriano</strong></p>
+      <p><a href="mailto:davidsorianoactor@gmail.com">davidsorianoactor@gmail.com</a></p>
+      <p><a href="tel:+34600291277">+34 600 291 277</a></p>
+      <p>Alicante, España</p>
+    </div>
+    <p class="copyright">© 2025 David Soriano</p>
   </footer>
 
 </body>
