--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Julie Smith – Actress Portfolio</title>
+  <title>David Soriano – Portfolio de Actor</title>
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
   <header>
     <img src="assets/icons/logo.png" alt="Logo" class="logo" />
     <nav>
-      <a href="#about">About Me</a>
-      <a href="gallery.html">Video Gallery</a>
-      <a href="#">Contact</a>
+      <a href="#about">Sobre Mi</a>
+      <a href="gallery.html">Galeria de Videos</a>
+      <a href="contact.html">Contactame</a>
+       <a href="cv.html" class="btn-cv">CV</a>
     </nav>
   </header>
 
@@ -20,30 +21,38 @@
     <div class="hero-overlay">
       <div class="hero-left">
         <div class="hero-text">
-          <h2>| Julie Smith |</h2>
-          <h1>TV, Film, and<br />Theater Actress</h1>
-          <p>Available for commissions worldwide.</p>
+          <h2>| David Soriano |</h2>
+          <h1>Actor <br />de TV <br />y <br />Películas</h1>
+          <p>Disponible para trabajar mundialmente.</p>
           <div class="buttons">
-            <a href="#" class="btn primary">▶ Video Gallery</a>
-            <a href="#" class="btn secondary">Contact Me</a>
+            <a href="gallery.html" class="btn primary">▶ Galeria de Videos</a>
+            <a href="contact.html" class="btn secondary">Contactame</a>
           </div>
         </div>
       </div>
 
       <div class="stats">
-        <div><span>10+</span><br />years of acting</div>
-        <div><span>12</span><br />nominations</div>
+        <div><span>10+</span><br />años de experencia</div>
+        <div><span>17+</span><br />Apariciones en Series y Películas</div>
       </div>
 
-      <div class="socials">
-        <a href="#"><img src="assets/icons/instagram.svg" alt="Instagram" /></a>
-        <a href="#"><img src="assets/icons/imdb.svg" alt="IMDb" /></a>
-        <a href="#"><img src="assets/icons/youtube.svg" alt="YouTube" /></a>
-      </div>
+<div class="socials">
+  <a href="https://www.instagram.com/davidsoriano15/" target="_blank">
+    <img src="assets/icons/instagram.svg" alt="Instagram" />
+  </a>
+
+  <a href="https://www.imdb.com/name/nm5211500/" target="_blank">
+    <img src="assets/icons/imdb.svg" alt="IMDb" />
+  </a>
+
+  <a href="https://www.youtube.com/@twinshows" target="_blank">
+    <img src="assets/icons/youtube.svg" alt="YouTube" />
+  </a>
+</div>
     </div>
   </section>
 
-  <div class="section-intro">“Every performance begins with a story.”</div>
+  <div class="section-intro">“Toda actuación empieza con una historia.”</div>
 
   <section class="about" id="about">
     <div class="card-carousel">
@@ -53,25 +62,29 @@
         <div class="carousel-track">
 
           <!-- CARD 1 -->
-          <div class="about-card active card-about-me">
-            <h2 class="about-title">About Me</h2>
-            <div class="about-text">
-              <p>Julie Smith is a passionate actress with over 10 years of experience...</p>
-            </div>
-            <div class="about-image">
-              <img src="assets/friend.png" alt="Friend Portrait" class="friend-fade-in friend-cutout" />
-            </div>
-          </div>
+    <div class="about-card active card-about-me">
+      <h2 class="about-title">Sobre Mí</h2>
+      <div class="about-text">
+        <p>
+          David Soriano es un actor nacido en Alicante, con más de 14 años de experiencia en cine, televisión y teatro. Actualmente reside en Madrid y ha trabajado en producciones tanto nacionales como internacionales, destacando por su versatilidad, presencia escénica y compromiso artístico.<br><br>
+          A lo largo de su trayectoria ha participado en proyectos para plataformas como Netflix, Amazon Prime, Rakuten TV y Antena 3, colaborando con directores como Pablo Berger, Antonio Hernández o Paco Caballero. Entre sus trabajos más recientes destacan la serie “Sin Huellas”, la película “La Cabaña” y el piloto “El Diablo”.<br><br>
+          David se ha formado en el Instituto del Cine de Madrid, el prestigioso Estudio Corazza, y ha continuado su entrenamiento con referentes como Fernando Piernas y Adán Black, además de especializarse en cine de acción y teatro físico.<br><br>
+          Domina el español y se desenvuelve con soltura en inglés. A lo largo de su carrera ha recibido reconocimientos como Mejor Actor en festivales como MadFest y FEPAD, y Mejor Reparto en el Festival de Cine de Alicante.<br><br>
+          David entiende la interpretación como un espacio de verdad, riesgo y emoción. Cree en el poder transformador de las historias y en la conexión profunda con el espectador.
+        </p>
+      </div>
+      <div class="about-image">
+        <img src="assets/friend.png" alt="David Soriano Portrait" class="friend-fade-in friend-cutout" />
+      </div>
+    </div>
 
           <!-- CARD 2 -->
+
           <div class="about-card card-video-gallery">
-            <h2 class="about-title">Video Gallery</h2>
+            <h2 class="about-title">Galeria de Vídeos</h2>
             <div class="about-text">
-              <p>Here you’ll find a curated selection of performances and reels.</p>
-              <a href="gallery.html" class="btn primary">Watch Now</a>
-            </div>
-            <div class="about-image">
-              <img src="assets/videogallery.jpg" alt="video gallery" class="video-gallery-pic" />
+              <p>Aqui encontraras una variedad de experencias únicas.</p>
+              <a href="gallery.html" class="btn primary">Ver ahora</a>
             </div>
           </div>
 
@@ -85,17 +98,17 @@
   <footer>
     <div class="footer-contact">
       <div class="info">
-        <img src="assets/icons/imdb.svg" alt="Phone" />
+        <img src="assets/icons/contact.svg" alt="Phone" />
         <div>
-          <p>+1 (234) 567 8900</p>
-          <p>julie_smith@email.com</p>
+          <p>+34 600 291 277</p>
+          <p>davidsorianoactor@gmail.com</p>
         </div>
       </div>
       <div class="info">
-        <img src="assets/icons/imdb.svg" alt="Location" />
+        <img src="assets/icons/location.svg" alt="Location" />
         <div>
-          <p>Los Angeles, CA</p>
-          <p>United States</p>
+          <p>Alicante, ES</p>
+          <p>España</p>
         </div>
       </div>
     </div>
