🎯 Página de contacto finalizada con estilos personalizados

--- a/contact.html
+++ b/contact.html
@@ -1,94 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Video Gallery | David Soriano</title>
-
-  <!-- Main Styles -->
-  <link rel="stylesheet" href="styles/style.css" />
-  <!-- Gallery Specific Styles -->
-  <link rel="stylesheet" href="styles/gallery.css" />
+  <title>Contacto | David Soriano</title>
+  <link rel="stylesheet" href="styles/contact.css" />
 </head>
+<body class="contact-page">
 
-<body class="gallery-page">
+  <header>
+    <img src="assets/icons/logo.png" alt="Logo" class="logo" />
+    <nav>
+      <a href="index.html#about">Sobre Mi</a>
+      <a href="gallery.html">Videobook</a>
+      <a href="contact.html" class="active">Contactame</a>
+      <a href="cv.html" class="btn-cv">CV</a>
+    </nav>
+  </header>
 
-<!-- HEADER -->
-<header>
-  <img src="assets/icons/logo.png" alt="Logo" class="logo" />
-  <nav>
-    <a href="index.html#about">Sobre Mi</a>
-    <a href="gallery.html" class="active">Galeria de Videos</a>
-    <a href="#">Contactame</a>
-    <a href="cv.html" class="btn-cv">CV</a>
-  </nav>
-</header>
+  <section class="contact-container">
+    <h1 class="contact-title">Contacto</h1>
+    <p class="contact-sub">Puedes encontrarme aquí:</p>
 
-  <!-- HERO -->
-  <section class="video-hero">
-    <h1 class="gallery-title">🎬 Galeria de Videos</h1>
-    <p class="gallery-sub">Una selección de mis actuaciones favoritas</p>
+    <div class="contact-info">
+      <div class="info-item">
+        <img src="assets/icons/location.svg" class="icon" alt="Email" />
+        <a href="mailto:davidsorianoactor@gmail.com">davidsorianoactor@gmail.com</a>
+      </div>
+      <div class="info-item">
+        <img src="assets/icons/contact.svg" class="icon" alt="Teléfono" />
+        <a href="tel:+34600291277">+34 600 291 277</a>
+      </div>
+      <div class="info-item">
+        <img src="assets/icons/instagram.svg" class="icon" alt="Instagram" />
+        <a href="https://www.instagram.com/davidsoriano15" target="_blank">@davidsoriano15</a>
+      </div>
+      <div class="info-item">
+        <img src="assets/icons/imdb.svg" class="icon" alt="IMDb" />
+        <a href="https://www.imdb.com/name/nm5211500/" target="_blank">IMDb Perfil</a>
+      </div>
+      <div class="info-item">
+        <img src="assets/icons/youtube.svg" class="icon" alt="YouTube" />
+        <a href="https://www.youtube.com/@twinshows" target="_blank">YouTube Canal</a>
+      </div>
+    </div>
   </section>
-
-  <!-- VIDEO GRID -->
-  <section class="video-grid">
-
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe width="633" height="356" src="https://www.youtube.com/embed/P2i64caPAhM" title="THE MEETING 🏯 | SHORT FILM | TWIN SHOW" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <h2>Short Film – <em>The Meeting</em></h2>
-    </div>
-
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe width="633" height="356" src="https://www.youtube.com/embed/2Xt9nKaIa2M" title="HAMSTERMAN 🎭 | Short Film | Twin Show" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <h2>Short Film – <em>Hamsterman</em></h2>
-    </div>
-
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe width="633" height="356" src="https://www.youtube.com/embed/fX4ldzUowIk" title="LA CABAÑA 🛖 - THE CABIN  | TWIN SHOW | SHORT FILM" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <h2>Short Film – <em>La Cabaña</em></h2>
-    </div>
-
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe width="633" height="356" src="https://www.youtube.com/embed/iFNVvtmv0e0" title="LA CASA DE PAPEL 🏦 | TWIN SHOW | SERIE NETFLIX" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <h2>Short Film – <em>La Casa de Papel</em></h2>
-    </div>
-
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe width="633" height="356" src="https://www.youtube.com/embed/g9mLKs9Bc7U" title="BAD TWINS | TWIN SHOW | BAD BOYS PELICULA ACCION" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      </div>
-      <h2>Short Film – <em>Bad Twins</em></h2>
-    </div>
-
-    <div class="video-card">
-      <div class="embed-container">
-        <iframe width="633" height="356" src="https://www.youtube.com/embed/vW_Apx5VZF4" title="🌑 DARK 🌑  | TWINSHOW | SERIE DARK NETFLIX" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      </div>
-      <h2>Short Film – <em>Dark</em></h2>
-    </div>
-
-    
-
-  </section>
-
-<!-- FOOTER -->
-<footer class="gallery-footer">
-  <div class="contact-info">
-    <p><strong>David Soriano</strong></p>
-    <p><a href="mailto:davidsorianoactor@gmail.com">davidsorianoactor@gmail.com</a></p>
-    <p><a href="tel:+34600291277">+34 600 291 277</a></p>
-    <p>Alicante, España</p>
-  </div>
-  <p class="copyright">© 2025 David Soriano</p>
-</footer>
 
 </body>
 </html>
