--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,15 @@
   <title>Currículum – David Soriano</title>
   <link rel="stylesheet" href="styles/cv.css" />
 </head>
+  <!-- HEADER -->
+  <header>
+    <nav>
+      <a href="index.html#about">Sobre Mí</a>
+      <a href="gallery.html" class="active">Videobook</a>
+      <a href="contact.html">Contáctame</a>
+      <a href="cv.html" class="btn-cv">CV</a>
+    </nav>
+  </header>
 <body>
   <header>
     <h1>David Soriano</h1>
