--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Video Gallery | David Soriano</title>
+  <title>Videobook | David Soriano</title>
 
   <!-- Main Styles -->
   <link rel="stylesheet" href="styles/style.css" />
@@ -18,8 +18,8 @@
     <img src="assets/icons/logo.png" alt="Logo" class="logo" />
     <nav>
       <a href="index.html#about">Sobre Mí</a>
-      <a href="gallery.html" class="active">Galería de Videos</a>
-      <a href="#">Contáctame</a>
+      <a href="gallery.html" class="active">Videobook</a>
+      <a href="contact.html">Contáctame</a>
       <a href="cv.html" class="btn-cv">CV</a>
     </nav>
   </header>
@@ -29,55 +29,18 @@
     
     <!-- HERO -->
     <section class="video-hero">
-      <h1 class="gallery-title">🎬 Galería de Videos</h1>
+      <h1 class="gallery-title">🎬 Videobook</h1>
       <p class="gallery-sub">Una selección de mis actuaciones favoritas</p>
     </section>
 
     <!-- VIDEO GRID -->
     <section class="video-grid">
-
-      <div class="video-card">
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/P2i64caPAhM" title="THE MEETING" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <h2>Short Film – <em>The Meeting</em></h2>
+    <div class="video-card">
+      <div class="embed-container">
+        <iframe src="https://player.vimeo.com/video/1048366839" frameborder="0" allowfullscreen></iframe>
       </div>
-
-      <div class="video-card">
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/2Xt9nKaIa2M" title="HAMSTERMAN" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <h2>Short Film – <em>Hamsterman</em></h2>
-      </div>
-
-      <div class="video-card">
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/fX4ldzUowIk" title="LA CABAÑA" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <h2>Short Film – <em>La Cabaña</em></h2>
-      </div>
-
-      <div class="video-card">
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/iFNVvtmv0e0" title="LA CASA DE PAPEL" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <h2>Short Film – <em>La Casa de Papel</em></h2>
-      </div>
-
-      <div class="video-card">
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/g9mLKs9Bc7U" title="BAD TWINS" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <h2>Short Film – <em>Bad Twins</em></h2>
-      </div>
-
-      <div class="video-card">
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/vW_Apx5VZF4" title="DARK" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <h2>Short Film – <em>Dark</em></h2>
-      </div>
-
+      <h2>Videobook de David Soriano</h2>
+    </div>
     </section>
 
   </main>
