--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="assets/icons/logo.png" alt="Logo" class="logo" />
     <nav>
       <a href="#about">Sobre Mi</a>
-      <a href="gallery.html">Galeria de Videos</a>
+      <a href="gallery.html">Videobook</a>
       <a href="contact.html">Contactame</a>
        <a href="cv.html" class="btn-cv">CV</a>
     </nav>
@@ -25,7 +25,7 @@
           <h1>Actor <br />de TV <br />y <br />Películas</h1>
           <p>Disponible para trabajar mundialmente.</p>
           <div class="buttons">
-            <a href="gallery.html" class="btn primary">▶ Galeria de Videos</a>
+            <a href="gallery.html" class="btn primary">▶ Videobook</a>
             <a href="contact.html" class="btn secondary">Contactame</a>
           </div>
         </div>
