🎯 Página de contacto sctualizada y cv

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles/contact.css" />
 </head>
 <body class="contact-page">
-
-  <header>
+<header>
+  <div class="header-inner"></div>
     <img src="assets/icons/logo.png" alt="Logo" class="logo" />
     <nav>
       <a href="index.html#about">Sobre Mi</a>
@@ -16,7 +16,8 @@
       <a href="contact.html" class="active">Contactame</a>
       <a href="cv.html" class="btn-cv">CV</a>
     </nav>
-  </header>
+  </div>
+</header>
 
   <section class="contact-container">
     <h1 class="contact-title">Contacto</h1>
@@ -40,8 +41,8 @@
         <a href="https://www.imdb.com/name/nm5211500/" target="_blank">IMDb Perfil</a>
       </div>
       <div class="info-item">
-        <img src="assets/icons/youtube.svg" class="icon" alt="YouTube" />
-        <a href="https://www.youtube.com/@twinshows" target="_blank">YouTube Canal</a>
+        <img src="assets/icons/vimeo.svg" class="icon" alt="YouTube" />
+        <a href="https://vimeo.com/1048366839" target="_blank">Videobook</a>
       </div>
     </div>
   </section>
