--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,18 @@
     </div>
     </section>
 
+    <!-- GALERÍA DE FOTOS -->
+    <section class="photo-gallery">
+      <h2>📸 Galería de Fotos</h2>
+      <p class="gallery-sub">Tomas de rodaje y retratos</p>
+      <div class="photo-grid">
+        <img src="assets/photos/portrait1.jpeg" alt="Retrato 1" />
+        <img src="assets/photos/acting1.jpg" alt="Rodaje 1" />
+        <img src="assets/photos/portrait2.jpeg" alt="Retrato 2" />
+        <img src="assets/photos/acting2.jpg" alt="Rodaje 2" />
+      </div>
+    </section>
+
   </main>
 
   <!-- FOOTER -->
