--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <div class="hero-left">
         <div class="hero-text">
           <h2>| David Soriano |</h2>
-          <h1>Actor <br />de TV <br />y <br />Películas</h1>
-          <p>Disponible para trabajar mundialmente.</p>
+          <h1>Actor <br />de Cine <br />y <br />Television</h1>
           <div class="buttons">
             <a href="gallery.html" class="btn primary">▶ Videobook</a>
             <a href="contact.html" class="btn secondary">Contactame</a>
@@ -32,7 +31,7 @@
       </div>
 
       <div class="stats">
-        <div><span>10+</span><br />años de experencia</div>
+        <div><span>12+</span><br />años de experencia</div>
         <div><span>17+</span><br />Apariciones en Series y Películas</div>
       </div>
 
@@ -83,7 +82,7 @@
           <div class="about-card card-video-gallery">
             <h2 class="about-title">Galeria de Vídeos</h2>
             <div class="about-text">
-              <p>Aqui encontraras una variedad de experencias únicas.</p>
+              <p>Videobook del actor David Soriano.</p>
               <a href="gallery.html" class="btn primary">Ver ahora</a>
             </div>
           </div>
@@ -107,7 +106,7 @@
       <div class="info">
         <img src="assets/icons/location.svg" alt="Location" />
         <div>
-          <p>Alicante, ES</p>
+          <p>Madrid, ES</p>
           <p>España</p>
         </div>
       </div>
