🎯 Espacio removed y television

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="hero-left">
         <div class="hero-text">
           <h2>| David Soriano |</h2>
-          <h1>Actor <br />de Cine <br />y <br />Television</h1>
+          <h1>Actor <br />de Cine <br />y Television</h1>
           <div class="buttons">
             <a href="gallery.html" class="btn primary">▶ Videobook</a>
             <a href="contact.html" class="btn secondary">Contactame</a>
