Añadido todas las imagenes

--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/style.css" />
   <!-- Gallery Specific Styles -->
   <link rel="stylesheet" href="styles/gallery.css" />
+  <script src="scripts/gallery.js" defer></script>
 </head>
 
 <body class="gallery-page">
@@ -44,16 +45,167 @@
     </section>
 
     <!-- GALERÍA DE FOTOS -->
-    <section class="photo-gallery">
-      <h2>📸 Galería de Fotos</h2>
-      <p class="gallery-sub">Tomas de rodaje y retratos</p>
-      <div class="photo-grid">
-        <img src="assets/photos/portrait1.jpeg" alt="Retrato 1" />
-        <img src="assets/photos/acting1.jpg" alt="Rodaje 1" />
-        <img src="assets/photos/portrait2.jpeg" alt="Retrato 2" />
-        <img src="assets/photos/acting2.jpg" alt="Rodaje 2" />
-      </div>
-    </section>
+<section class="photo-gallery">
+  <h2>📸 Galería de Fotos</h2>
+  <p class="gallery-sub">Tomas de rodaje y retratos</p>
+  <div class="photo-grid">
+    <div class="photo-item">
+  <img src="assets/photos/ENERGY SYSTEM ANUNCIO 2015 ESPAÑA.jpg" alt="ENERGY SYSTEM ANUNCIO 2015 ESPAÑA" />
+  <p class="caption">ENERGY SYSTEM ANUNCIO 2015 ESPAÑA</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/La cabaña.JPG" alt="La cabaña" />
+  <p class="caption">La cabaña</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 455.jpg" alt="DAVID SORIANO 455" />
+  <p class="caption">DAVID SORIANO 455</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 3.jpeg" alt="DAVID SORIANO 3" />
+  <p class="caption">DAVID SORIANO 3</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Los chicos del llavero 3.jpg" alt="Los chicos del llavero 3" />
+  <p class="caption">Los chicos del llavero 3</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/chico conoce chica corto ganador 2014 madrid 2.jpg" alt="chico conoce chica corto ganador 2014 madrid 2" />
+  <p class="caption">chico conoce chica corto ganador 2014 madrid 2</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 431.jpg" alt="DAVID SORIANO 431" />
+  <p class="caption">DAVID SORIANO 431</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David SOriano 2.jpg" alt="David Soriano 2" />
+  <p class="caption">David Soriano 2</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/chico conoce chica corto ganador 2014 madrid.jpg" alt="chico conoce chica corto ganador 2014 madrid" />
+  <p class="caption">chico conoce chica corto ganador 2014 madrid</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Animales fantasticos teatro kinepolis.jpg" alt="Animales fantasticos teatro kinepolis" />
+  <p class="caption">Animales fantasticos teatro kinepolis</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 4.jpeg" alt="DAVID SORIANO 4" />
+  <p class="caption">DAVID SORIANO 4</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 5.jpeg" alt="DAVID SORIANO 5" />
+  <p class="caption">DAVID SORIANO 5</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/ANUNCIO LOTERIA 2013.jpg" alt="ANUNCIO LOTERIA 2013" />
+  <p class="caption">ANUNCIO LOTERIA 2013</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Animales fantasticos show teatro kinepolis.jpg" alt="Animales fantasticos show teatro kinepolis" />
+  <p class="caption">Animales fantasticos show teatro kinepolis</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 1.jpeg" alt="DAVID SORIANO 1" />
+  <p class="caption">DAVID SORIANO 1</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 2.jpeg" alt="DAVID SORIANO 2" />
+  <p class="caption">DAVID SORIANO 2</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David Soriano 3.jpg" alt="David Soriano 3" />
+  <p class="caption">David Soriano 3</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David Soriano 5.png" alt="David Soriano 5" />
+  <p class="caption">David Soriano 5</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David Soriano 6.png" alt="David Soriano 6" />
+  <p class="caption">David Soriano 6</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 412.jpg" alt="DAVID SORIANO 412" />
+  <p class="caption">DAVID SORIANO 412</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/DAVID SORIANO 418.jpg" alt="DAVID SORIANO 418" />
+  <p class="caption">DAVID SORIANO 418</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David Soriano.jpg" alt="David Soriano" />
+  <p class="caption">David Soriano</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David Soriano2573.jpg" alt="David Soriano2573" />
+  <p class="caption">David Soriano2573</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David Soriano2574.jpg" alt="David Soriano2574" />
+  <p class="caption">David Soriano2574</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/David Soriano2761.jpg" alt="David Soriano2761" />
+  <p class="caption">David Soriano2761</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/ENERGY SYSTEM ANUNCIO 2 2015.jpg" alt="ENERGY SYSTEM ANUNCIO 2 2015" />
+  <p class="caption">ENERGY SYSTEM ANUNCIO 2 2015</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Halloween games 2.JPG" alt="Halloween games 2" />
+  <p class="caption">Halloween games 2</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Halloween games.JPG" alt="Halloween games" />
+  <p class="caption">Halloween games</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Halloween games.JPG" alt="halloween games poster" />
+  <p class="caption">halloween games poster</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/La casa de papel 2.jpg" alt="La casa de papel 2" />
+  <p class="caption">La casa de papel 2</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/La importancia de llamarse corto ganador.jpg" alt="La importancia de llamarse corto ganador" />
+  <p class="caption">La importancia de llamarse corto ganador</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Los chicos del llavero 1.jpg" alt="Los chicos del llavero 1" />
+  <p class="caption">Los chicos del llavero 1</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Los chicos del llavero 2.jpg" alt="Los chicos del llavero 2" />
+  <p class="caption">Los chicos del llavero 2</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Mad fest 2016.jpg" alt="Mad fest 2016" />
+  <p class="caption">Mad fest 2016</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/mad fest 2016 2.jpg" alt="mad fest 2016 2" />
+  <p class="caption">mad fest 2016 2</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/Pablo Berger y David Soriano.JPG" alt="Pablo Berger y David Soriano" />
+  <p class="caption">Pablo Berger y David Soriano</p>
+</div>
+<div class="photo-item">
+  <img src="assets/photos/trabajando maquillaje.jpg" alt="trabajando maquillaje" />
+  <p class="caption">trabajando maquillaje</p>
+</div>
+
+  </div>
+</section>
+
+<!-- Modal para ver imagen ampliada -->
+<div id="photoModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="modalImage">
+</div>
 
   </main>
 
