--- a/gallery.html
+++ b/gallery.html
@@ -166,11 +166,11 @@
   <p class="caption">halloween games poster</p>
 </div>
 <div class="photo-item">
-  <img src="assets/photos/La casa de papel 2.jpg" alt="La casa de papel 2" />
+  <img src="assets/photos/La casa de papel 2.JPG" alt="La casa de papel 2" />
   <p class="caption">La casa de papel 2</p>
 </div>
 <div class="photo-item">
-  <img src="assets/photos/La importancia de llamarse corto ganador.jpg" alt="La importancia de llamarse corto ganador" />
+  <img src="assets/photos/la importancia de llamarse corto ganador.jpg" alt="La importancia de llamarse corto ganador" />
   <p class="caption">La importancia de llamarse corto ganador</p>
 </div>
 <div class="photo-item">
