Añadido todas las imagenesFIX

--- a/gallery.html
+++ b/gallery.html
@@ -162,7 +162,7 @@
   <p class="caption">Halloween games</p>
 </div>
 <div class="photo-item">
-  <img src="assets/photos/Halloween games.JPG" alt="halloween games poster" />
+  <img src="assets/photos/hallowen games poster.jpg" alt="halloween games poster" />
   <p class="caption">halloween games poster</p>
 </div>
 <div class="photo-item">
